# discord_ai_bot_2

./: .env.example  .gitignore  Cargo.toml  README.md  web_api_技術仕様書.md  システム全体技術書.md
data/: history.db  memo.txt
src/: main.rs
src/ai/: AI_API_KEY.txt  client.rs  convert.rs  embedding.rs  mod.rs  openai.rs
src/bot/: handler.rs  interaction.rs  mod.rs
src/rag/: mod.rs  rag.rs
src/search/: mod.rs
src/strage/: history.rs
src/web/: mod.rs
static/: app.js  index.html  style.css
static/css/: base.css  chat.css  files.css  responsive.css  sidebar.css  statusbar.css
static/js/: api.js  chat.js  files.js  main.js  search.js  sidebar.js  state.js  status.js  utils.js
